# test-arrays-criterion

./: Cargo.toml
benches/: my_bench.rs
