[package]
name = "untitled29"
version = "0.1.0"
authors = ["Psilon <pzixel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"
rand = "0.8.3"
itertools = "0.10.0"

[[bench]]
name = "my_bench"
harness = false